--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,20 @@ nav li {
     display: inline;
     margin-right: 0.5rem;
 }
+
+nav {
+    background-color: black;
+    color: white;
+    padding: 0.5rem;  
+    margin: 1rem 0;
+}
+
+nav ul {
+    padding: 0;
+    margin: 0;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
