--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 /* Stylesheet für die Übungswebsite aus "Einstieg in HTML + CSS" */
 
+
+/* Gestaltung Navigation */
 nav li {
     display: inline;
     margin-right: 0.5rem;
@@ -18,6 +20,20 @@ nav ul {
 }
 
 nav a {
+    color: white;
+    text-decoration: none;
+}
+
+/*Gestaltung Footer*/
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: right;
+    padding: 0.5rem;
+}
+
+footer a {
     color: white;
     text-decoration: none;
 }
