--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,10 @@ footer a {
     color: white;
     text-decoration: none;
 }
+
+
+/*Sanftes Scrollen aktivieren*/
+
+html {
+        scroll-behavior: smooth;
+}
