--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 /* Stylesheet für die Übungswebsite aus "Einstieg in HTML + CSS" */
 
+/*Gestaltung Kopfbereich vom Body*/
+
+/*Fine-Tuning: Aussenabstände um Logo und Slogan anpassen*/
+header h1 {
+    margin-bottom: 0;
+}
+header p {
+    margin-top: 0;
+}
+
 
 /* Gestaltung Navigation */
 nav li {
